fix: background colour showing through on left-side of step-container on mobile. Set step width to 100%

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ body{
 }
 .step{
   height: 100%;
-  width: 6.25%;
+  width: 100%;
   background-color: var(--stepBackground);
   border: 1px solid var(--stepDefaultBorder);
 }
